compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__records__nested_record_update.snap
---
source: compiler-core/src/nix/tests/records.rs
expression: "pub type Wibble {\n  Wibble(a: Int, b: Wobble, c: Int)\n}\n\npub type Wobble {\n  Wobble(a: Int, b: Int)\n}\n\npub fn main() {\n  let base = Wibble(1, Wobble(2, 3), 4)\n  Wibble(..base, b: Wobble(..base.b, b: 5))\n}"
---
----- SOURCE CODE
pub type Wibble {
  Wibble(a: Int, b: Wobble, c: Int)
}

pub type Wobble {
  Wobble(a: Int, b: Int)
}

pub fn main() {
  let base = Wibble(1, Wobble(2, 3), 4)
  Wibble(..base, b: Wobble(..base.b, b: 5))
}

----- COMPILED NIX
let
  Wibble = a: b: c: { __gleamTag = "Wibble"; inherit a b c; };
  
  Wobble = a: b: { __gleamTag = "Wobble"; inherit a b; };
  
  main =
    { }:
    let
      base = Wibble 1 (Wobble 2 3) 4;
    in
    base // { b = (base.b // { b = 5; }); };
in
{ inherit Wibble Wobble main; }
