compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__records__record_accessor_multiple_variants.snap
---
source: compiler-core/src/nix/tests/records.rs
expression: "\npub type Person {\n    Teacher(name: String, title: String)\n    Student(name: String, age: Int)\n}\npub fn get_name(person: Person) { person.name }"
snapshot_kind: text
---
----- SOURCE CODE

pub type Person {
    Teacher(name: String, title: String)
    Student(name: String, age: Int)
}
pub fn get_name(person: Person) { person.name }

----- COMPILED NIX
let
  Teacher = name: title: { __gleamTag = "Teacher"; inherit name title; };
  
  Student = name: age: { __gleamTag = "Student"; inherit name age; };
  
  get_name = person: person.name;
in
{ inherit Teacher Student get_name; }
