compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__records__record_accessor_multiple_variants_parameterised_types.snap
---
source: compiler-core/src/nix/tests/records.rs
expression: "\npub type Person {\n    Teacher(name: String, age: List(Int), title: String)\n    Student(name: String, age: List(Int))\n}\npub fn get_name(person: Person) { person.name }\npub fn get_age(person: Person) { person.age }"
snapshot_kind: text
---
----- SOURCE CODE

pub type Person {
    Teacher(name: String, age: List(Int), title: String)
    Student(name: String, age: List(Int))
}
pub fn get_name(person: Person) { person.name }
pub fn get_age(person: Person) { person.age }

----- COMPILED NIX
let
  Teacher =
    name: age: title: { __gleamTag = "Teacher"; inherit name age title; };
  
  Student = name: age: { __gleamTag = "Student"; inherit name age; };
  
  get_name = person: person.name;
  
  get_age = person: person.age;
in
{ inherit Teacher Student get_name get_age; }
