compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__records__record_accessor_multiple_variants_positions_other_than_first.snap
---
source: compiler-core/src/nix/tests/records.rs
expression: "\npub type Person {\n    Teacher(name: String, age: Int, title: String)\n    Student(name: String, age: Int)\n}\npub fn get_name(person: Person) { person.name }\npub fn get_age(person: Person) { person.age }"
---
let
  Teacher =
    name: age: title: { __gleamTag = "Teacher"; inherit name age title; };
  
  Student = name: age: { __gleamTag = "Student"; inherit name age; };
  
  get_name = person: person.name;
  
  get_age = person: person.age;
in
{ inherit Teacher Student get_name get_age; }
