compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__records__record_accessor_multiple_with_first_position_different_types.snap
---
source: compiler-core/src/nix/tests/records.rs
expression: "\npub type Person {\n    Teacher(name: Nil, age: Int)\n    Student(name: String, age: Int)\n}\npub fn get_age(person: Person) { person.age }"
---
let
  Teacher = name: age: { __gleamTag = "Teacher"; inherit name age; };
  
  Student = name: age: { __gleamTag = "Student"; inherit name age; };
  
  get_age = person: person.age;
in { inherit Teacher Student get_age; }
