compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__records__record_accessors_with_escaping.snap
---
source: compiler-core/src/nix/tests/records.rs
expression: "\npub type Person { Person(then: String, builtins: Int) }\npub fn get_age(person: Person) { person.then }\npub fn get_name(person: Person) { person.builtins }\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Person { Person(then: String, builtins: Int) }
pub fn get_age(person: Person) { person.then }
pub fn get_name(person: Person) { person.builtins }


----- COMPILED NIX
let
  Person =
    then': builtins':
      { __gleamTag = "Person"; "then" = then'; builtins = builtins'; };
  
  get_age = person: person."then";
  
  get_name = person: person.builtins;
in
{ inherit Person get_age get_name; }
